<resources>
    <string name="app_name">Usalama Barabarani</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="sign_title">
        <item>Stop Sign</item>
        <item>Kivuko Mbele</item>
        <item>Muinuko</item>
        <item>Kona mbili kulia</item>
        <item>Kona mbili kushoto</item>
        <item>Simama</item>
    </string-array>
    <string-array name="description">
        <item>Mita kadhaa mbele simama</item>
        <item>Mita kadhaa mbele kuna Kivuko cha waenda kwa miguu</item>
        <item>Mita kadhaa mbele kuna muinuko</item>
        <item>punguza spidi kuna Kona mbili kulia</item>
        <item>punguza spidi kuna Kona mbili kushoto</item>
        <item>Embu simama asee!</item>
    </string-array>
    <string name="option_a">Alama za Amri</string>
    <string name="option_b">Alama za Onyo au Tahadhari</string>
    <string name="option_c">Alama za Maelekezo</string>
    <string name="option_d">Alama za Taarifa za Ziada</string>
    <string name="option_e">Alama za Usuli na Michoro Barabarani</string>
    <string name="option_f">Maelekezo ya Askari wa Usalama Barabarani</string>
    <string name="option_1">Alama hizi hutoa amri kwa watumiaji wa barabara juu ya jambo kulingana na sehemu husika, huwa katika umbo la duara.</string>
    <string name="option_2">Alama hizi hutahadharisha watumiaji wa barabaran juu ya jambo au hatari iliyopo mbeleni. Alama hizi huwa katika umbo la pembe tatu.</string>
    <string name="option_3">Alama hizi hutoa maelekezo kuu ya utumiaji bora wa barabara au uelekeo, na huwa katika umbo la pembe nne na mara nyingi kwa rangi ya bluu, kijani au nyekundu.</string>
    <string name="option_4">Hili ni kundi la alama zinazotoa taarifa za nyongeza kwenye alama kuu(primary signs). Mara nyingi alama hizi hazikai peke yake. Ni lazima kuwa na alama kuu(primary sign) halafu chini yake kunawekwa plate ndogo yenye taarifa ya Ziada.</string>
    <string name="option_5">Alama hizi huchorwa sakafuni kwa rangi nyeupe na kutoa maelekezo mbalimbali juu ya matumiz bora ya barabara na maumbo yake hutofautiana kulingana na matumizi ya alama.</string>
    <string name="option_6">Ni maelekezo yatolewayo na Askari wakati wa kuongoza vyombo vya usafiri</string>
    <string name="MaanaKujihami">Ni udereva wa kuzuia ajali zote zinazozuilika, hata zile ambazo zingetokea kwa makosa ya wengine au hali zisizo kubalika.</string>
    <string name="nguzo1">1. KUANGALIA (SEE)</string>
    <string name="nguzo2">2. KUTAMBUA (IDENTIFY)</string>
    <string name="nguzo3">3. TABIRI (PREDICT)</string>
    <string name="nguzo4">4. KUAMUA (DECIDE)</string>
    <string name="nguzo5">5.  KUTEKELEZA</string>
    <string name="nguzo1Desc">Kabla ya kuendesha na wakati wa kuendesha ni muhimu.
    Uangalizi mzuri huchukua picha halisi ya hali ya barabara na kuipeleka kwenye ubongo kwa ajili ya utekelezaji.
    Vile vile uangaliaji kabla ya safari, husaidia katika uangaliaji uliomzuri wa gari kwa vifaa mbali mbali.</string>
    <string name="nguzo2Desc">Usithubutu kufikiri hata kidogo kuwa kila kitu kitakuwa Sawa sawa, zingatia hatari na kuchukua hatua ya kuziepuka zitatokea kwa mfano : umetambua kuwa mbele kuna watoto wa shule wapo kando ya barabara, hivyo utatabiri kuwa wanaweza kuvuka barabara bila kuangalia magari vizuri.
Hivyo tabiri maeneo!</string>
    <string name="nguzo3Desc">Jiulize mwenyewe ni kitu gani kinaweza kutokea kwa kile ulichokitambua?
Kwa mfano umetambua kuwa mbele kuna watoto wanacheza pembezoni mwa barabara, hivyo utabiri kuwa wanaweza kuvuka barabara bila kuangalia magari, hivyo tabiri maeneo ya hatari kwa kutumia macho yako vizuri.</string>
    <string name="nguzo4Desc">Dereva wa kujihami anatakiwa kutoa maamuzi ya haraka, kwani maamuzi yanapocheleweshwa, yanaweza kuleta madhara /yaani kusababisha ajali.</string>
    <string name="nguzo5Desc">Maamuzi yeyote yanayotolewa na dereva, hayana budi kuendana na utekelezaji, kwa mfano ;ikiwa dereva ameamua kupunguza mwendo, basi hana budi kupunguza mwendo huo, kwani kuendelea kwenda kwa speed ya juu wakati mazingira hayaruhusu, uwezekano wa kupata ajali ni mkubwa.</string>
    <string name="sifa1">1. Ni dereva anaejituma kuzielewa na kuziheshimu sheria kanuni na taratibu za usalama barabarani</string>
    <string name="sifa2">2. Haendeshi chombo cha moto katika hali zinzaoweza kusababisha ajali kwake mwenyewe na watumiaji wengine wa barabara</string>
    <string name="sifa3">3. Uwezo wa kufuatilia magari yanayomzunguka: Dereva huyu anajitahidi kuwa na uelewa wa magari yaliyopo mbele yake, nyuma yake, na pande zote. Anakuwa na uwezo wa kujua hali ya barabara na kuchukua hatua zinazofaa kuzuia ajali.</string>
    <string name="sifa4">4. Muda wote yupo tayari kutoa nafasi kwa watumia barabara wengine na huchukua hatua zinazo stahiki ajali isitokee</string>
    <string name="sifa5">5. Ni mvumilivu wa kero za watumia barabara wengine na huchukulia swala hilo kama sehemu ya kawaida ya udereva, muda wote yupo macho na hali zisizo kubalika.</string>
    <string name="sifa6">6. Ni dereva ambae haruhusu umakini wake kuchukuliwa na vizuizi kama matumizi ya simu wakati wa kuendesha, watoto, kula na matumizi “ya make up”</string>
    <string name="temperature">Ukiona taa hii imewaka kwenye dashbodi ya gari, ina maana injini ya gari lako inapata joto kubwa kupita kiwango kinachoruhusiwa. Hivyo egesha gari pembeni, zima injini ya gari, iache injini ya gari ipoe kwa muda wa angalau dakika 40. Fungua mfuniko wa maji ya kupoza injini (coolant) na uweke maji ya kutosha, kisha funika mfuniko washa gari na uangalie tena taa hii kama imezimika. Kama taa haijazimika tafadhali usiendelee na safari na peleka gari lako kwa fundi magari (auto mechanic).</string>
    <string name="OilPressure">Ukiona taa hii imewaka kwenye dashbodi ya gari, ujue kua oil ya injini ya gari lako ipo pungufu ya ujazo unaotakiwa. Hivyo fungua boneti la gari, kagua kijiti cha oil kuhakikisha kua ni kweli imepungua ujazo. Ongeza ujazo wa oil na pima hadi ifikie kiwango kinachohitajika, funga boneti na angalia kama taa hii imezimika. Endapo taa haijamizika tafadhali peleka gari lako kwa fundi magari (auto mechanic)</string>
    <string name="EngineCheck">Ukiona taa hii imewaka kwenye dashbodi ya gari, ujue kuna tatizo kwenye injini, tafadhali usiendelee na safari. Peleka gari lako kwa fundi wa magari aipime na kurekebisha tatizo lililopo kwenye injini</string>
    <string name="TirePressure">Ukiona taa hii imewaka kwenye dashbodi ya gari, ujue tairi moja au zaidi ya tairi moja limepungua upepo. Hivyo, peleka gari kwa fundi matairi akague kama kuna pancha kwenye tairi aweze kurekebisha na kujaza upepo unaohitajika kwenye matairi ya gari lako</string>
    <string name="BrakeSystem">Ukiona taa hii imewaka kwenye dashbodi ya gari, ujue breki ya dharura/breki ya mkono (handbrake) ipo imewekwa, tafadhali ondoa breki hii kabla ya kuendesha gari. Kama taa inawaka na breki hii ya mkono/dharura imeondolewa, basi kagua mafuta ya breki kama yapo ujazo unaohitajika. kama mafuta ya breki yapo ujazo sawa, ujue kuna tatizo kwenye mfumo wa breki tafadhali peleka gari kwa fundi magari akague tatizo na kurekebisha</string>
    <string name="AbsWarning">(Antilock Braking System), ukiona taa hii imewaka kwenye dashbodi ya gari, ujue breki hii haifanyi kazi, ABS ni breki ya ziada ambayo lengo kuu ni kukusaidia kusimama ghafla au unapohitaji kusimama kwenye matope, ingawaje breki ya kawaida inafanya kazi, ni vizuri upeleke gari kwa fundi arekebishe kasoro hii</string>
    <string name="Stability">Ukiona taa hii imewaka kwenye dashbodi ya gari, ujue Gari lako limeweka nguvu kwenye mfumo wa matairi ili matairi ya gari yasiteleze na kukutoa nje ya barabara kwenye barabara inayoteleza au yenye matope</string>
    <string name="TransmissionTemp">Ukiona taa hii imewaka kwenye dashbodi ya gari, ujue joto kwenye mfumo wa gia, hivyo angalia kama mafuta ya transmission/mafuta ya gia box kama yapo ujazo unaohitajika, kama yapo ujazo sawa tafadhali peleka gari kwa fundi magari akague gari lako.</string>
    <string name="Battery">Ukiona taa hii imewaka kwenye dashbodi ya gari, ujue mfumo wa kuchaji betri haupo sawa na injini haipati nguvu ya kutosha. Hii husababishwa na nyaya kutofungwa vizuri kwenye terminal za betri au betri mbovu/imeisha muda wake. Tafadhali kaza terminal za betri vizuri na uangalie taa hii kama inawaka, kama inaendelea kuwaka tafadhali nunua betri mpya inayolingana nguvu na gari lako na ufunge</string>
    <string name="Airbag">Ukiona taa hii inawaka kwenye dashbodi ya gari, ujue kuna tatizo kwenye mfumo wa puto la usalama la kuzuia ajali. tafadhali peleka gari kwa fundi magari arekebishe tatizo hili</string>
    <string name="Fuel">ukiona taa hii inawaka kwenye dashibodi ya gari lako, ujue mafuta kwenye tenki yamepungua ujazo hivyo gari itazimika muda wowote. Epuka kuendesha gari ikiwa taa hii inawaka. Unashauriwa mafuta (gasoline/diesel) yawe angalau robo tenki ili pampu ya mafuta isiharibike haraka</string>
    <string name="Doors">Ukiona taa hii imewaka kwenye dashbodi ya gari, ujue kuna mlango haujafungwa vizuri. hakikisha milango yote imefungwa ikiwemo mlango wa mizigo nyuma ya gari.Kwani taa hii ikiendelea kuwaka humaliza chaji ya betri na kushindwa kuwasha gari baadae</string>
    <string name="qn1">Eleza umuhimu wa kulikagua gari lako asubuhi au kabla ya kuendesha?</string>
    <string name="qn2">Ishara za barabarani zina faida gani?</string>
    <string name="qn3">Ni kwa njia gani unaweza kugundua kasoro kwenye gari?</string>
    <string name="qn4">Taja maeneo ambayo hutakiwi kulipita gari lililo mbele yako?</string>
    <string name="qn5">Wakati unaendesha gari likiwaka moto utafanyaje?</string>
    <string name="qn6">Matengenezo ya gari ni yapi?</string>
    <string name="qn7">Ni sheria ipi unatakiwa kufuata unapoingia mzunguko wa barabara?</string>
    <string name="qn8">Je! unaweza kurudisha gari nyuma toka barabara ndogo kuelekea barabara kuu?</string>
    <string name="qn9">Ni vyombo gani vya moto haviruhusiwi kutumia barabara kuu?</string>
    <string name="qn10">Ni vifaa gani unatakiwa kubeba kwenye gari?</string>
    <string name="qn11">Ni zipi sehemu kuu tatu (3) za gari?</string>
    <string name="qn12">Ni wakati gani hutakiwi kuendesha gari?</string>
    <string name="qn13">Ni upi Ukaguzi wa gari asubuhi au kabla ya kuanza safari?</string>
    <string name="qn14">Vitu gani vya gari lako vinatakiwa kua safi muda wote?</string>
    <string name="ans1">Ili kuepuka kutokea ajali au kuharibika gari na pia kuepuka kuishiwa mafuta mahali ambapo ni vigumu kupata msaada</string>
    <string name="ans2">zinamwezesha dereva kujua hali ya barabara ilivyo na hivyo kumsaidia kufanya maamuzi sahihi</string>
    <string name="ans3">Unaweza kugundua kasoro kwenye gari kwa kunusa, kusikia, na kuona</string>
    <string name="ans4">Sehemu ambazo huwezi kuona mbali mbele yako, sehemu ya daraja, sehemu ambazo ni karibu na makutano ya barabara, kwenye kona, sehemu ambazo watembea kwa miguu wanakatisha barabara, sehemu zenye mstari mweupe ulionyooka katikati ya barabara</string>
    <string name="ans5">Nitasimamisha gari na kuzima moto kwa kutumia dawa ya kuzimia moto (dry chemical powder fire extinguisher)</string>
    <string name="ans6">Ni kubadili oil ya injini, kubadili oil filter, grisi na kukaza nati zilizolegea kwenye gari</string>
    <string name="ans7">Toa kipaumbele kwa watumia barabara walio kulia kwako</string>
    <string name="ans8">Hapana, marufuku kurudisha gari nyuma kutoka barabara ndogo kuelekea barabara kuu. Tumia kanuni ya kugeuza gari kwa vituo vitatu yaani three point turning</string>
    <string name="ans9">Magari ya kujifunzia, vyombo vya moto vyenye injini chini ya 50cc, mikokoteni inayovutwa na farasi pamoja na vyombo vyote vyenye uwezo wa kwenda chini ya 50kph</string>
</resources>